--- a/2. Kotlin.md
+++ b/2. Kotlin.md
@@ -79,3 +79,59 @@
 
 ![image](https://user-images.githubusercontent.com/80378041/158190466-e5282ca1-463e-47ac-b8e3-aff75013a873.png)
 
+## 예외처리
+> 코드 실행 시 발생하는 에러를 수습 및 방지하기 위한 처리이다.
+
+- try-catch 예외처리
+  - try : 코드 실행을 시도하며, 해당 구역 에러 발생을 감지
+  - catch : try 구역의 에러 발생시 분기되어 해당 코드가수행됨
+  - finally : try-catch와 관계없이 무조건 수행되는 코드
+  - try-catch는 에러에 취약한 영역에서 발생되는 에러를 감지하여 프로그램을 __정상종료__ 시키는 것이 목적이다.  
+- throw 예외처리
+  - 조건에 맞을경우, 정의된 에러를 발생시킴
+  - throw는 코드로 __에러를 유발__ 시키는 것이 목적이다.(이후 조치를 하지 않으면 프로그램이 비정상 종료된다)
+
+![image](https://user-images.githubusercontent.com/80378041/159689019-a6300425-5b1b-48ae-9b6f-b723cd53f2df.png)
+
+## 람다함수
+> 익명함수 기법으로 함수를 간단하게 정의할 때 사용한다     
+> ![image](https://user-images.githubusercontent.com/80378041/159689136-185172d5-e9f4-40eb-9d15-4322dc5ee195.png)     
+
+- 람다함수는 함수형 프로그래밍 개념으로 함수를 파라미터로 전달할 수 있다
+- 재귀 반복 문제의 성능 개선에 효과적이다
+
+## 고차함수
+> 다른 함수를 매개변수로 받거나 함수를 반환하는 함수
+
+### 매개변수로 함수를 받는 고차함수
+![image](https://user-images.githubusercontent.com/80378041/159689511-e2f73946-ee36-4bae-81cb-2022120c1abb.png)     
+> 이 때는 매개변수 함수 operation은 외부에서 정의된다.
+
+### 함수를 반환하는 고차함수
+> 고차함수는 함수를 리턴 값으로 반환하는 것이 가능하다     
+
+![image](https://user-images.githubusercontent.com/80378041/159689689-32791f2f-7094-410b-ae8e-94e8faf5fc7c.png)
+
+## 확장함수
+> 클래스 밖에서 함수를 추가해 줄 수 있다.     
+> 어떤 클래스를 직접 수정할 수 없을 때,      
+> 기존 클래스는 그대로 두고 클래스 주변에서 새로운 함수나 프로퍼티를 추가하여 클래스의 크기를 확장하는 함수이다.
+
+![image](https://user-images.githubusercontent.com/80378041/159690065-456240da-e316-466a-abc3-2e089209665b.png)
+
+## 오버로딩(Overloading)
+> 동일한 이름을 갖는 함수를 매개변수만 다르게 하여, 여러개의 함수를 정의하는 것.     
+> 동일한 기능을 하는 함수들에 대해서 파라미터에 따라 다양한 이름으로 정의할 필요가 없어짐.
+
+![image](https://user-images.githubusercontent.com/80378041/159690242-18ee176a-ec3b-4534-b232-f5d3861e36e8.png)
+
+## 오버라이딩(Overriding)
+> 부모 클래스의 메서드를 자식 클래스에서 재정의해서 사용한다.     
+> override fun 메서드를 사용하여 함수를 재정의해준다.      
+
+- 필요한 부분에 대해서만 상속받고 그 외의 부분은 수정이 가능하게 함으로써, 클래스 선언으로 중복되는 코드를 줄일 수 있다
+- 클래스간 유지보수를 용이하게 하고, 코드의 간결성을 보장한다
+
+![image](https://user-images.githubusercontent.com/80378041/159690605-460109d9-ccd3-4791-a2d5-f566403fc7d8.png)
+
+
