--- a/2. Kotlin.md
+++ b/2. Kotlin.md
@@ -134,4 +134,16 @@
 
 ![image](https://user-images.githubusercontent.com/80378041/159690605-460109d9-ccd3-4791-a2d5-f566403fc7d8.png)
 
+## 널 안정성
+> NullPointerException으로부터의 안전을 보장해준다.      
+> 기본적으로 Kotlin은 Null을 허용하지 않는다.     
+> 하지만, 변수의 자료형 뒤에 `?`를 붙여 예외적으로 Null을 허용할 수 있다.
+
+![image](https://user-images.githubusercontent.com/80378041/159690861-fe671313-bc71-4a3d-91ac-54ba848526ef.png)
+
+- Null이 허용된 변수는 세이프콜 `?.`과 엘비스 연산자`?:`를 사용하여 Null을 검사하고 사용할 수 있다
+  - 엘비스 연산자 : 변수가 Null이라면 오른쪽, 아니라면 왼쪽을 선택한다
+  - 세이프 콜: 변수값이 Null이라면 null을 반환하고, 아니라면 그 값을 리턴해준다
+
+![image](https://user-images.githubusercontent.com/80378041/159691417-c5af13b0-9bb2-450c-9d68-c36fdc32beb6.png)
 
